update "deniz" to "sea"

--- a/istanbulEylul23/main.ipynb
+++ b/istanbulEylul23/main.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-11-02T15:25:20.827573Z",
-     "start_time": "2023-11-02T15:25:18.002221Z"
+     "end_time": "2023-11-03T10:15:49.610039Z",
+     "start_time": "2023-11-03T10:15:46.770461Z"
     }
    },
    "outputs": [
@@ -17,7 +17,7 @@
       "text/plain": "             _id transition_date  transition_hour  transport_type_id  \\\n27            28      2023-09-17               17                  3   \n55            56      2023-09-17               16                  3   \n68            69      2023-09-14               17                  3   \n89            90      2023-09-22               12                  3   \n91            92      2023-09-19               19                  3   \n...          ...             ...              ...                ...   \n4200571  4200572      2023-09-13               10                  3   \n4200590  4200591      2023-09-07               20                  3   \n4200594  4200595      2023-09-12               16                  3   \n4200595  4200596      2023-09-21               15                  3   \n4200600  4200601      2023-09-27                5                  3   \n\n        road_type                           line transfer_type  \\\n27           DENZ                EMINONU-KADIKOY       Aktarma   \n55           DENZ                 MALTEPE-ADALAR       Aktarma   \n68           DENZ                CUBUKLU-ISTINYE       Aktarma   \n89           DENZ  ANADOLU HISARI-KUCUKSU-ASIYAN        Normal   \n91           DENZ                USKUDAR-EMINONU       Aktarma   \n...           ...                            ...           ...   \n4200571      DENZ              KABATAS-Y.KADIKOY        Normal   \n4200590      DENZ                         ADALAR        Normal   \n4200594      DENZ  ANADOLU HISARI-KUCUKSU-ASIYAN        Normal   \n4200595      DENZ                         ADALAR       Aktarma   \n4200600      DENZ                 ADALAR-KABATAS        Normal   \n\n         number_of_passage  number_of_passenger  \n27                       6                    6  \n55                       1                    1  \n68                       4                    4  \n89                       1                    1  \n91                      25                   25  \n...                    ...                  ...  \n4200571                  2                    2  \n4200590                 93                   93  \n4200594                  3                    3  \n4200595                  9                    9  \n4200600                  3                    3  \n\n[233735 rows x 9 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>_id</th>\n      <th>transition_date</th>\n      <th>transition_hour</th>\n      <th>transport_type_id</th>\n      <th>road_type</th>\n      <th>line</th>\n      <th>transfer_type</th>\n      <th>number_of_passage</th>\n      <th>number_of_passenger</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>27</th>\n      <td>28</td>\n      <td>2023-09-17</td>\n      <td>17</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>EMINONU-KADIKOY</td>\n      <td>Aktarma</td>\n      <td>6</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>55</th>\n      <td>56</td>\n      <td>2023-09-17</td>\n      <td>16</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>MALTEPE-ADALAR</td>\n      <td>Aktarma</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>68</th>\n      <td>69</td>\n      <td>2023-09-14</td>\n      <td>17</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>CUBUKLU-ISTINYE</td>\n      <td>Aktarma</td>\n      <td>4</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>89</th>\n      <td>90</td>\n      <td>2023-09-22</td>\n      <td>12</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>ANADOLU HISARI-KUCUKSU-ASIYAN</td>\n      <td>Normal</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>91</th>\n      <td>92</td>\n      <td>2023-09-19</td>\n      <td>19</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>USKUDAR-EMINONU</td>\n      <td>Aktarma</td>\n      <td>25</td>\n      <td>25</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>4200571</th>\n      <td>4200572</td>\n      <td>2023-09-13</td>\n      <td>10</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>KABATAS-Y.KADIKOY</td>\n      <td>Normal</td>\n      <td>2</td>\n      <td>2</td>\n    </tr>\n    <tr>\n      <th>4200590</th>\n      <td>4200591</td>\n      <td>2023-09-07</td>\n      <td>20</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>ADALAR</td>\n      <td>Normal</td>\n      <td>93</td>\n      <td>93</td>\n    </tr>\n    <tr>\n      <th>4200594</th>\n      <td>4200595</td>\n      <td>2023-09-12</td>\n      <td>16</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>ANADOLU HISARI-KUCUKSU-ASIYAN</td>\n      <td>Normal</td>\n      <td>3</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>4200595</th>\n      <td>4200596</td>\n      <td>2023-09-21</td>\n      <td>15</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>ADALAR</td>\n      <td>Aktarma</td>\n      <td>9</td>\n      <td>9</td>\n    </tr>\n    <tr>\n      <th>4200600</th>\n      <td>4200601</td>\n      <td>2023-09-27</td>\n      <td>5</td>\n      <td>3</td>\n      <td>DENZ</td>\n      <td>ADALAR-KABATAS</td>\n      <td>Normal</td>\n      <td>3</td>\n      <td>3</td>\n    </tr>\n  </tbody>\n</table>\n<p>233735 rows × 9 columns</p>\n</div>"
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25,9 +25,9 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "deniz = pd.read_csv('eylul2023.csv')\n",
-    "deniz = deniz[deniz['road_type'] == 'DENZ']\n",
-    "deniz\n",
+    "sea = pd.read_csv('eylul2023.csv')\n",
+    "sea = sea[sea['road_type'] == 'DENZ']\n",
+    "sea\n",
     "\n",
     "# The dataset seems to contain information about transitions, likely related to some transportation system or network. It includes details such as date, time, line, transfer type, number of passages, and number of passengers.\n",
     "\n",
@@ -36,55 +36,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
       "text/plain": "                _id  transition_hour  transport_type_id  number_of_passage  \\\ncount  2.337350e+05    233735.000000           233735.0      233735.000000   \nmean   2.104001e+06        13.931499                3.0          26.554478   \nstd    1.212725e+06         4.848267                0.0          68.639642   \nmin    2.800000e+01         0.000000                3.0           1.000000   \n25%    1.055124e+06        10.000000                3.0           2.000000   \n50%    2.105514e+06        14.000000                3.0           5.000000   \n75%    3.155919e+06        18.000000                3.0          19.000000   \nmax    4.200601e+06        23.000000                3.0        2112.000000   \n\n       number_of_passenger  \ncount        233735.000000  \nmean             23.927863  \nstd              57.265950  \nmin               1.000000  \n25%               2.000000  \n50%               5.000000  \n75%              19.000000  \nmax            1743.000000  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>_id</th>\n      <th>transition_hour</th>\n      <th>transport_type_id</th>\n      <th>number_of_passage</th>\n      <th>number_of_passenger</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>2.337350e+05</td>\n      <td>233735.000000</td>\n      <td>233735.0</td>\n      <td>233735.000000</td>\n      <td>233735.000000</td>\n    </tr>\n    <tr>\n      <th>mean</th>\n      <td>2.104001e+06</td>\n      <td>13.931499</td>\n      <td>3.0</td>\n      <td>26.554478</td>\n      <td>23.927863</td>\n    </tr>\n    <tr>\n      <th>std</th>\n      <td>1.212725e+06</td>\n      <td>4.848267</td>\n      <td>0.0</td>\n      <td>68.639642</td>\n      <td>57.265950</td>\n    </tr>\n    <tr>\n      <th>min</th>\n      <td>2.800000e+01</td>\n      <td>0.000000</td>\n      <td>3.0</td>\n      <td>1.000000</td>\n      <td>1.000000</td>\n    </tr>\n    <tr>\n      <th>25%</th>\n      <td>1.055124e+06</td>\n      <td>10.000000</td>\n      <td>3.0</td>\n      <td>2.000000</td>\n      <td>2.000000</td>\n    </tr>\n    <tr>\n      <th>50%</th>\n      <td>2.105514e+06</td>\n      <td>14.000000</td>\n      <td>3.0</td>\n      <td>5.000000</td>\n      <td>5.000000</td>\n    </tr>\n    <tr>\n      <th>75%</th>\n      <td>3.155919e+06</td>\n      <td>18.000000</td>\n      <td>3.0</td>\n      <td>19.000000</td>\n      <td>19.000000</td>\n    </tr>\n    <tr>\n      <th>max</th>\n      <td>4.200601e+06</td>\n      <td>23.000000</td>\n      <td>3.0</td>\n      <td>2112.000000</td>\n      <td>1743.000000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "deniz.describe()"
+    "sea.describe()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-02T15:24:42.515362Z",
-     "start_time": "2023-11-02T15:24:42.316092Z"
+     "end_time": "2023-11-03T10:15:49.649327Z",
+     "start_time": "2023-11-03T10:15:49.604964Z"
     }
    },
    "id": "ca97c278d924d5af"
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [
     {
      "data": {
       "text/plain": "array(['EMINONU-KADIKOY', 'MALTEPE-ADALAR', 'CUBUKLU-ISTINYE',\n       'ANADOLU HISARI-KUCUKSU-ASIYAN', 'USKUDAR-EMINONU',\n       'KARAKOY-KADIKOY', 'ESKIHISAR-TOPCULAR', 'ISTINYE-CUBUKLU',\n       'BESIKTAS-USKUDAR', 'BOGAZ', 'BOSTANCI-ADALAR',\n       'AVCILAR - BOSTANCI', 'USKUDAR-KABATAS', 'KADIKOY-EMINONU',\n       'E.KADIKOY-BESIKTAS', 'USKUDAR-BOGAZ', 'KABATAS-ADALAR',\n       'KABATAS-USKUDAR', 'ASIYAN-USKUDAR', 'ADALAR-KABATAS', 'ADALAR',\n       'BARBAROS-E.KADIKOY', 'KARAKOY-USKUDAR', 'ADALAR-BOSTANCI',\n       'KABATAS-Y.KADIKOY', 'Y.KADIKOY-EMINONU', 'KARAKOY-Y.KADIKOY',\n       'USKUDAR-BESIKTAS', 'E.KADIKOY-ADALAR', 'Y.KADIKOY-KABATAS',\n       'KARAKOY-BOSTANCI', 'CENGELKOY-KABATAS', 'EMINONU-USKUDAR',\n       'BESIKTAS-ADALAR', 'USKUDAR-ORTAKOY', 'YENIKOY-BEYKOZ',\n       'AVCILAR - BAKIRKOY-KADIKOY', 'Y.KADIKOY-KARAKOY', 'HALIC',\n       'SIRKECI-HAREM', 'BOSTANCI-AVCILAR', 'BEYKOZ-YENIKOY',\n       'BOSTANCI - MODA - KADIKOY - KABATAS', 'KADIKOY-ORTAKOY',\n       'BOSTANCI-KABATAS', 'ORTAKOY-KADIKOY', 'YENIKAPI-ADALAR',\n       'IC HATLAR'], dtype=object)"
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "lines = deniz.line.unique()\n",
-    "lines\n",
+    "# There are 48 lines in the dataset. The stop names identify the direction of the stops.\n",
+    "# Such as \"KADIKOY-USKUDAR\" and \"USKUDAR-KADIKOY\" are the same line but in different directions.\n",
     "\n",
-    "# There are 48 lines in the dataset. The stop names identifiy the direction of the stops. \n",
-    "# Such as \"KADIKOY-USKUDAR\" and \"USKUDAR-KADIKOY\" are the same line but in different directions."
+    "lines = sea.line.unique()\n",
+    "lines"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-11-02T15:29:34.970281Z",
-     "start_time": "2023-11-02T15:29:34.836080Z"
+     "end_time": "2023-11-03T10:15:49.751605Z",
+     "start_time": "2023-11-03T10:15:49.647397Z"
     }
    },
    "id": "e449c1bc047bac81"
@@ -240,7 +240,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure(figsize=(20, 10))\n",
-    "plt.bar(lines, deniz.groupby('line')['number_of_passenger'].sum())\n",
+    "plt.bar(lines, sea.groupby('line')['number_of_passenger'].sum())\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()\n"
    ],
@@ -270,8 +270,8 @@
     "# create pie chart for the lines which are top 10, with the number of passengers\n",
     "\n",
     "plt.figure(figsize=(20, 10))\n",
-    "plt.pie(deniz.groupby('line')['number_of_passenger'].sum().nlargest(10),\n",
-    "        labels=deniz.groupby('line')['number_of_passenger'].sum().nlargest(10).index)\n",
+    "plt.pie(sea.groupby('line')['number_of_passenger'].sum().nlargest(10),\n",
+    "        labels=sea.groupby('line')['number_of_passenger'].sum().nlargest(10).index)\n",
     "plt.show()\n"
    ],
    "metadata": {
@@ -298,8 +298,8 @@
    ],
    "source": [
     "# Earliest and latest transition date\n",
-    "print(\"Earliest transition date: \", deniz['transition_date'].min())\n",
-    "print(\"Latest transition date: \", deniz['transition_date'].max())"
+    "print(\"Earliest transition date: \", sea['transition_date'].min())\n",
+    "print(\"Latest transition date: \", sea['transition_date'].max())"
    ],
    "metadata": {
     "collapsed": false,
@@ -327,7 +327,7 @@
    "source": [
     "# Calculate density ( current number_of_passenger / maximum of number_of_passenger of line in all times ) for each line for each transition_hour, and find day of week and add it to the dataframe\n",
     "\n",
-    "df = deniz.copy()\n",
+    "df = sea.copy()\n",
     "df['density'] = df['number_of_passenger'] / df.groupby('line')['number_of_passenger'].transform('max')\n",
     "df['day_of_week'] = pd.to_datetime(df['transition_date']).dt.day_name()\n",
     "df"
@@ -405,7 +405,7 @@
     "# The bar graphs  for each line in lines for the transfer_type is \"Normal\" or \"Aktarma\" and add title to each graph\n",
     "\n",
     "for line in lines[:2]:\n",
-    "    plt.bar(deniz[deniz['line'] == line].transfer_type, deniz[deniz['line'] == line].number_of_passenger)\n",
+    "    plt.bar(sea[sea['line'] == line].transfer_type, sea[sea['line'] == line].number_of_passenger)\n",
     "    plt.xticks(rotation=90)\n",
     "    plt.title(line)\n",
     "    plt.show()\n"
@@ -480,7 +480,7 @@
    ],
    "source": [
     "# find the line of most \"Aktarma\" transfer_type \n",
-    "deniz[deniz['transfer_type'] == 'Aktarma'].groupby('line')['number_of_passenger'].sum().idxmax()"
+    "sea[sea['transfer_type'] == 'Aktarma'].groupby('line')['number_of_passenger'].sum().idxmax()"
    ],
    "metadata": {
     "collapsed": false,
@@ -506,7 +506,7 @@
    ],
    "source": [
     "# find the line of most \"Normal\" transfer_type\n",
-    "deniz[deniz['transfer_type'] == 'Normal'].groupby('line')['number_of_passenger'].sum().idxmax()"
+    "sea[sea['transfer_type'] == 'Normal'].groupby('line')['number_of_passenger'].sum().idxmax()"
    ],
    "metadata": {
     "collapsed": false,
@@ -532,7 +532,7 @@
    ],
    "source": [
     "# find the top 3 lines of most crowded in the between 6 and 10\n",
-    "deniz[(deniz['transition_hour'] >= 6) & (deniz['transition_hour'] <= 10)].groupby('line')[\n",
+    "sea[(sea['transition_hour'] >= 6) & (sea['transition_hour'] <= 10)].groupby('line')[\n",
     "    'number_of_passenger'].sum().nlargest(3)"
    ],
    "metadata": {
@@ -569,7 +569,7 @@
    ],
    "source": [
     "# find the top 3 lines of most crowded in the between 16 and 18\n",
-    "deniz[(deniz['transition_hour'] >= 16) & (deniz['transition_hour'] <= 18)].groupby('line')[\n",
+    "sea[(sea['transition_hour'] >= 16) & (sea['transition_hour'] <= 18)].groupby('line')[\n",
     "    'number_of_passenger'].sum().nlargest(3)"
    ],
    "metadata": {
